# Pac-Man-2

./: .gitmodules  CMakeLists.txt
.github/workflows/: ci.yml
assets/: PacMan.aps  PacMan.rc  resource.h
include/: BaseCollision.hpp  BaseEntity.hpp  BaseState.hpp  EDirection.hpp  EntityManager.hpp  Game.hpp  GameGameState.hpp  GameStateMachine.hpp  Map.hpp  Player.hpp  loadFromResource.hpp
map/: map.txt
src/: BaseCollision.cpp  BaseEntity.cpp  BaseState.cpp  EntityManager.cpp  Game.cpp  GameGameState.cpp  GameStateMachine.cpp  Map.cpp  Player.cpp  loadFromResource.cpp  main.cpp
